# pinyin-translator

./: .drone.yml  .gitmodules  Cargo.toml  README.md  build.rs  publish.sh
src/: lib.rs  main.rs  vars.rs
